--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
       <!-- <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">All the Best Sir!</h3>
-        <h5 data-node-name="wishText">Thank you so much Gaurav sir for your guidance and support. Wishing you lots of
+        <h3 class="wish-hbd" data-node-name="wishHeading">All the Best!</h3>
+        <h5 data-node-name="wishText">Thank you so much Ben for your guidance and support. Wishing you lots of
           good luck for your future.</h5>
 
       </div>
