--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
       <!-- <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">All the Best!</h3>
-        <h5 data-node-name="wishText">Thank you so much Ben for your guidance and support. Wishing you lots of
-          good luck for your future.</h5>
+        <h5 data-node-name="wishText">Thank you for the good times and sweet memories that we shared together, Happy Farewell sevaa</h5>
 
       </div>
     </div>
